# SimpCode

./: .gitignore  AGENT.md  README.md  SIMP.md  SPEC.md  findings.md  install.sh  pyproject.toml  remediation_audit_report.md  rewrite_prompts.py  test_groq.py  test_skill_loader.py  test_wiki_fixes.py
.simp/logs/: exec_sess-failures.jsonl  exec_sess-test.jsonl
.simp/plans/: plan_task_1778880462.json  plan_task_1778881728.json
.simp/sessions/: sess-chat.json  sess-interrupt.json
.simp/wiki/: index.md  invariants.md  patterns.md  risks.md
.simp/wiki/modules/: cli.md  core.md  harness.md  wiki.md
docs/: ARCHITECTURE_DEEP_DIVE.md  COMPREHENSIVE_GUIDE.md  EXAMPLES.md  TROUBLESHOOTING.md  architecture_diagram.md  guide.md  index.md
docs/architecture/: modes.md  overview.md
docs/components/: cli.md  core.md  harness.md  wiki.md
docs/concepts/: architecture.md  index.md
docs/getting-started/: file-ownership.md  installation-deep-dive.md  overview.md  setup-and-usage.md
docs/how-to/: advanced-capabilities.md  index.md  writing-rules.md
docs/reference/: index.md
docs/usage/: onboarding.md  workflows.md
real_test_project/: SIMP.md  SPEC.md  legacy.py
real_test_project/.simp/: history
real_test_project/.simp/sessions/: session_1778703291.json
real_test_project/.simp/wiki/: index.md  invariants.md  patterns.md  risks.md
src/simpcode/cli/: main.py  shell.py
src/simpcode/core/: analyzer.py  config.py  evolution.py  executor.py  (+11 more)
tests/: test_hashes.py  test_performance_benchmarks.py  test_phase3_evaluation.py  test_upgrade_regressions.py  test_wiki.py
(+36 files in other folders)
