[project]
name = "simpcode"
version = "0.1.0"
description = "A spec-driven, semantically aware agentic coding assistant."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.1",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "anthropic>=0.26.0",
    "google-genai>=0.3.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.1",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "prompt_toolkit>=3.0.43",
]

[project.scripts]
simp = "simpcode.cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
